Added Add Notes Screen, as well as navigation to that screen

--- a/app.json
+++ b/app.json
@@ -18,10 +18,17 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.noxaspera.ResearchFlow"
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "extra": {
+      "eas": {
+        "projectId": "a029bed2-e612-447e-aadf-d304009df399"
+      }
+    },
+    "owner": "noxaspera"
   }
 }
