--- a/package.json
+++ b/package.json
@@ -9,23 +9,29 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-masked-view/masked-view": "^0.3.2",
-    "@react-native-picker/picker": "^2.9.0",
+    "@octokit/rest": "^21.0.2",
+    "@react-native-masked-view/masked-view": "0.3.1",
+    "@react-native-picker/picker": "2.7.5",
     "@react-navigation/native": "^7.0.0",
     "@react-navigation/stack": "^7.0.0",
     "expo": "~51.0.28",
+    "expo-file-system": "~17.0.1",
     "expo-status-bar": "~1.12.1",
+    "fs": "^0.0.1-security",
+    "node-libs-react-native": "^1.2.1",
+    "octokit": "^4.0.2",
     "react": "18.2.0",
     "react-native": "0.74.5",
-    "react-native-gesture-handler": "^2.20.2",
-    "react-native-reanimated": "^3.16.1",
-    "react-native-safe-area-context": "^4.14.0",
-    "react-native-screens": "^4.0.0"
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
+    "typescript": "5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
-    "typescript": "^5.1.3"
+    "typescript": "~5.3.3"
   },
   "private": true
 }
