--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-reanimated": "^3.16.1",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^4.0.0",
+    "react-native-svg": "^15.9.0",
     "react-native-ui-kitten": "^4.4.1"
   },
   "devDependencies": {
