--- a/package.json
+++ b/package.json
@@ -9,36 +9,39 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@babel/runtime": "^7.26.0",
     "@eva-design/eva": "^2.2.0",
-    "@octokit/rest": "^21.0.2",
-    "@react-native-masked-view/masked-view": "0.3.1",
-    "@react-native-picker/picker": "2.7.5",
-    "@react-navigation/native": "^7.0.0",
-    "@react-navigation/stack": "^7.0.0",
+    "@octokit/rest": "^21.1.0",
+    "@react-native-masked-view/masked-view": "0.3.2",
+    "@react-native-picker/picker": "2.9.0",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/stack": "^7.1.1",
     "@ui-kitten/components": "^5.3.1",
-    "expo": "~51.0.28",
-    "expo-file-system": "~17.0.1",
-    "expo-status-bar": "~1.12.1",
-    "fs": "^0.0.1-security",
+    "cocoapods": "^0.0.0",
+    "expo": "~52.0.24",
+    "expo-file-system": "~18.0.6",
+    "expo-status-bar": "~2.0.0",
+    "expo-web-browser": "^14.0.1",
+    "fs": "0.0.1-security",
+    "http": "0.0.1-security",
     "node-libs-react-native": "^1.2.1",
-    "octokit": "^4.0.2",
-    "react": "18.2.0",
-    "react-native": "0.74.5",
-    "react-native-gesture-handler": "^2.20.2",
-    "react-native-reanimated": "^3.16.1",
-    "react-native-safe-area-context": "^4.14.0",
-    "react-native-screens": "^4.0.0",
-    "react-native-svg": "^15.9.0",
+    "octokit": "^4.1.0",
+    "react": "18.3.1",
+    "react-native": "0.76.5",
+    "react-native-app-auth": "^8.0.1",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-reanimated": "~3.16.6",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-svg": "15.8.0",
+    "react-native-tcp-socket": "^6.2.0",
     "react-native-ui-kitten": "^4.4.1",
-    "react-native-gesture-handler": "~2.16.1",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
     "typescript": "5.3.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
+    "@babel/core": "^7.26.0",
+    "@types/react": "~18.3.18",
+    "react-native-http": "^0.0.3",
     "typescript": "~5.3.3"
   },
   "private": true
