--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ stages:
 build:
   stage: build
   tags: 
-    - saas-linux-medium-amd64
+    - android
   script:
     - echo "Building..."
     - pnpm install
