--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,9 @@ build:
     - android
   script:
     - echo "Building..."
+    - npm install -g pnpm
     - pnpm install
+    - pnpm android
   artifacts:
     expire_in: 1 days
     when: on_success
