--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,8 @@ image: reactnativecommunity/react-native-android
 
 variables:
   ADB_INSTALL_TIMEOUT: 10 # Timeout for ADB installation
+  ANDROID_HOME: "/opt/android-sdk"
+  PATH: "/opt/android-sdk/platform-tools:/opt/android-sdk/emulator:$PATH"
 
 before_script:
   # Install pnpm globally
@@ -20,22 +22,14 @@ android:
     - android
   script:
     - echo "Setting up Android Emulator..."
-    # Download and install the necessary Android SDK tools and emulator
-    - sdkmanager "system-images;android-30;google_apis;x86_64"
+    - sdkmanager "system-images;android-24;default;x86"
     - sdkmanager --licenses
-    - sdkmanager "platform-tools" "platforms;android-30"
-    - echo "no" | avdmanager create avd -n test_avd -k "system-images;android-30;google_apis;x86_64"
-    # Start the emulator in headless mode
-    - nohup emulator -avd test_avd -no-snapshot -no-audio -no-window &
-    # Wait for the emulator to boot
+    - sdkmanager "platform-tools" "platforms;android-24"
+    - echo "no" | avdmanager create avd -n test_avd -k "system-images;android-24;default;x86" --device "Nexus 4"
+    - nohup emulator -avd test_avd -no-window -no-audio -no-snapshot -no-boot-anim -gpu swiftshader_indirect -partition-size 1024 &
     - adb wait-for-device
     - adb shell input keyevent 82 # Unlock the emulator screen
     - echo "Emulator is ready!"
-  artifacts:
-    expire_in: 1 day
-    when: on_success
-    paths:
-      - $ANDROID_HOME
 
 build:
   stage: build
