--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,8 +2,6 @@ image: reactnativecommunity/react-native-android
 
 variables:
   ADB_INSTALL_TIMEOUT: 10 # Timeout for ADB installation
-  ANDROID_HOME: "/opt/android-sdk"
-  PATH: "/opt/android-sdk/platform-tools:/opt/android-sdk/emulator:$PATH"
 
 before_script:
   # Install pnpm globally
@@ -22,14 +20,22 @@ android:
     - android
   script:
     - echo "Setting up Android Emulator..."
+    # Download and install the necessary Android SDK tools and emulator
     - sdkmanager "system-images;android-24;default;x86"
     - sdkmanager --licenses
-    - sdkmanager "platform-tools" "platforms;android-24"
+    - sdkmanager "platform-tools" "platforms;android-30"
     - echo "no" | avdmanager create avd -n test_avd -k "system-images;android-24;default;x86" --device "Nexus 4"
-    - nohup emulator -avd test_avd -no-window -no-audio -no-snapshot -no-boot-anim -gpu swiftshader_indirect -partition-size 1024 &
+    # Start the emulator in headless mode
+    - nohup emulator -avd test_avd -no-snapshot -no-audio -no-window -gpu swiftshader_indirect -no-boot-anim -partition-size 1024 &
+    # Wait for the emulator to boot
     - adb wait-for-device
     - adb shell input keyevent 82 # Unlock the emulator screen
     - echo "Emulator is ready!"
+  artifacts:
+    expire_in: 1 day
+    when: on_success
+    paths:
+      - $ANDROID_HOME
 
 build:
   stage: build
