--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -18,23 +18,27 @@
     "@react-navigation/stack": "^7.1.1",
     "@ui-kitten/components": "^5.3.1",
     "cocoapods": "^0.0.0",
-    "expo": "~52.0.24",
-    "expo-file-system": "~18.0.6",
-    "expo-status-bar": "~2.0.0",
-    "expo-web-browser": "^14.0.1",
+    "eas": "^0.1.0",
+    "expo": "~52.0.25",
+    "expo-auth-session": "^6.0.2",
+    "expo-dev-client": "~5.0.9",
+    "expo-file-system": "~18.0.7",
+    "expo-linking": "~7.0.4",
+    "expo-status-bar": "~2.0.1",
+    "expo-web-browser": "~14.0.2",
     "fs": "0.0.1-security",
     "http": "0.0.1-security",
     "node-libs-react-native": "^1.2.1",
     "octokit": "^4.1.0",
     "react": "18.3.1",
-    "react-native": "0.76.5",
-    "react-native-app-auth": "^8.0.1",
+    "react-native": "0.76.6",
+    "react-native-cli": "latest",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-github-login": "^0.0.1",
     "react-native-reanimated": "~3.16.6",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
-    "react-native-tcp-socket": "^6.2.0",
     "react-native-ui-kitten": "^4.4.1",
     "typescript": "5.3.3"
   },
