--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,12 +21,12 @@ android:
   script:
     - echo "Setting up Android Emulator..."
     # Download and install the necessary Android SDK tools and emulator
-    - sdkmanager "system-images;android-24;default;x86"
+    - sdkmanager "system-images;android-30;google_apis;x86_64"
     - sdkmanager --licenses
     - sdkmanager "platform-tools" "platforms;android-30"
-    - echo "no" | avdmanager create avd -n test_avd -k "system-images;android-24;default;x86" --device "Nexus 4"
+    - echo "no" | avdmanager create avd -n test_avd -k "system-images;android-30;google_apis;x86_64"
     # Start the emulator in headless mode
-    - nohup emulator -avd test_avd -no-snapshot -no-audio -no-window -gpu swiftshader_indirect -no-boot-anim -partition-size 1024 &
+    - nohup emulator -avd test_avd -no-snapshot -no-audio -no-window &
     # Wait for the emulator to boot
     - adb wait-for-device
     - adb shell input keyevent 82 # Unlock the emulator screen
