--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,9 @@
 image: reactnativecommunity/react-native-android
 
 variables:
-  ADB_INSTALL_TIMEOUT: 10 # Timeout for ADB installation
+  ADB_INSTALL_TIMEOUT: 20 # Timeout for ADB installation
+  ANDROID_HOME: /opt/android-sdk
+  PATH: $ANDROID_HOME/emulator:$ANDROID_HOME/platform-tools:$ANDROID_HOME/tools:$PATH
 
 before_script:
   # Install pnpm globally
@@ -21,19 +23,16 @@ android:
   script:
     - echo "Setting up Android Emulator..."
     # Download and install the necessary Android SDK tools and emulator
-    - sdkmanager "system-images;android-30;google_apis;x86_64"
-    - sdkmanager --licenses
-    - sdkmanager "platform-tools" "platforms;android-30"
+    - sdkmanager "platform-tools" "platforms;android-30" "tools" "system-images;android-30;google_apis;x86_64"
+    - yes | sdkmanager --licenses
     - echo "no" | avdmanager create avd -n test_avd -k "system-images;android-30;google_apis;x86_64"
-    - adb kill-server
     - adb start-server
     # Start the emulator in headless mode
-    - nohup emulator -avd test_avd -no-snapshot -no-audio -no-window -no-accel -wipe-data -verbose &
+    - nohup emulator -avd test_avd -no-snapshot -no-audio -no-window -no-accel -wipe-data -verbose &> emulator.log &
     # Wait for the emulator to boot
     - adb wait-for-device
     - adb shell input keyevent 82 # Unlock the emulator screen
     - echo "Emulator is ready!"
-  timeout: 20m
   artifacts:
     expire_in: 1 day
     when: on_success
