--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,8 +2,6 @@ image: reactnativecommunity/react-native-android
 
 variables:
   ADB_INSTALL_TIMEOUT: 20 # Timeout for ADB installation
-  ANDROID_HOME: /opt/android-sdk
-  PATH: $ANDROID_HOME/cmdline-tools/latest/bin:$ANDROID_HOME/platform-tools:$ANDROID_HOME/emulator:$PATH
 
 before_script:
   # Install pnpm globally
@@ -22,20 +20,18 @@ android:
     - android
   script:
     - echo "Setting up Android Emulator..."
-    - rm -rf $ANDROID_HOME/*
     # Download and install the necessary Android SDK tools and emulator
     - sdkmanager --verbose "system-images;android-30;google_apis;x86_64"
-    - yes | sdkmanager --licenses
-    - sdkmanager "platform-tools" "platforms;android-30"
+    - sdkmanager --licenses
+    - sdkmanager --verbose "platform-tools" "platforms;android-30"
     - echo "no" | avdmanager create avd -n test_avd -k "system-images;android-30;google_apis;x86_64"
-    - adb kill-server
-    - adb start-server
     # Start the emulator in headless mode
-    - nohup emulator -avd test_avd -no-snapshot -no-audio -no-window -no-accel -wipe-data -verbose &
+    - nohup emulator -avd test_avd -no-snapshot -no-audio -no-window &
     # Wait for the emulator to boot
     - adb wait-for-device
     - adb shell input keyevent 82 # Unlock the emulator screen
     - echo "Emulator is ready!"
+
   artifacts:
     expire_in: 1 day
     when: on_success
