--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,7 +22,7 @@ android:
     - echo "Setting up Android Emulator..."
     # Download and install the necessary Android SDK tools and emulator
     - sdkmanager --verbose "system-images;android-30;google_apis;x86_64"
-    - sdkmanager --licenses
+    - sdkmanager --verbose --licenses
     - sdkmanager --verbose "platform-tools" "platforms;android-30"
     - echo "no" | avdmanager create avd -n test_avd -k "system-images;android-30;google_apis;x86_64"
     # Start the emulator in headless mode
