added updates to the before script and no accel flag to emulator

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,8 @@ before_script:
   - npm install -g pnpm
   # Install dependencies
   - pnpm install
+  - sdkmanager --update
+  - apt-get update && apt-get install -y libc6 libstdc++6 libgcc1 libx11-6 libx11-xcb1 libxrender1 libxrandr2 mesa-utils
 
 stages:
   - android
@@ -31,7 +33,7 @@ android:
     - avdmanager list avd
 
     # Start the emulator in headless mode
-    - nohup emulator -avd test_avd -no-snapshot -no-audio -no-window -verbose > emulator.log 2>&1 &
+    - nohup emulator -avd test_avd -no-snapshot -no-accel -no-audio -no-window -verbose > emulator.log 2>&1 &
 
     # Wait for the emulator to boot
     - adb start-server
