trying same solution again

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,7 +36,7 @@ android:
     # Start the emulator in headless mode
     - Xvfb :1 &
     - export DISPLAY=:1
-    - nohup emulator -avd test_avd -no-snapshot -no-accel -no-audio -no-window -verbose > emulator.log 2>&1 &
+    - nohup emulator -avd test_avd -no-snapshot -no-accel -no-audio -verbose > emulator.log 2>&1 &
     - tail -f emulator.log &
 
     # Wait for the emulator to boot
