--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "dependencies": {
     "@babel/runtime": "^7.26.0",
     "@eva-design/eva": "^2.2.0",
-    "@octokit/rest": "^21.1.0",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-masked-view/masked-view": "0.3.2",
     "@react-native-picker/picker": "2.9.0",
@@ -20,32 +19,33 @@
     "@ui-kitten/components": "^5.3.1",
     "cocoapods": "^0.0.0",
     "crypto": "^1.0.1",
-    "dotenv": "^16.4.7",
     "eas": "^0.1.0",
-    "expo": "~52.0.25",
+    "expo": "~52.0.27",
     "expo-auth-session": "~6.0.2",
-    "expo-crypto": "~14.0.2",
-    "expo-dev-client": "~5.0.9",
+    "expo-crypto": "^14.0.2",
+    "expo-dev-client": "~5.0.10",
     "expo-file-system": "~18.0.7",
     "expo-linking": "~7.0.4",
     "expo-status-bar": "~2.0.1",
     "expo-web-browser": "~14.0.2",
     "firebase": "^11.2.0",
     "fs": "0.0.1-security",
-    "http": "0.0.1-security",
     "node-libs-react-native": "^1.2.1",
-    "octokit": "^4.1.0",
+    "os": "^0.1.2",
+    "path": "^0.12.7",
     "react": "18.3.1",
     "react-native": "0.76.6",
     "react-native-cli": "latest",
     "react-native-crypto": "^2.2.0",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-github-login": "^0.0.1",
-    "react-native-reanimated": "~3.16.6",
+    "react-native-reanimated": "~3.16.7",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-ui-kitten": "^4.4.1",
+    "stream": "^0.0.3",
     "typescript": "5.3.3"
   },
   "devDependencies": {
