--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,5 @@
-image: reactnativecommunity/react-native-android
+image: openjdk:18-jdk-slim
+  # reactnativecommunity/react-native-android
 
 variables:
   ADB_INSTALL_TIMEOUT: 20 # Timeout for ADB installation
@@ -9,8 +10,9 @@ before_script:
   # Install dependencies
   - pnpm install
   - sdkmanager --update
-  - apt-get update && apt-get install -y libc6 libstdc++6 libgcc1 libx11-6 libx11-xcb1 libxrender1 libxrandr2 mesa-utils libpulse0 libxi6
-  - apt-get install -y xvfb
+  # get necessary libraries
+  - apt-get update && apt-get install -y curl sudo wget unzip bzip2 libdrm-deb libxkbcommon-deb libgbm-dev libasound-dev libnss3 libxcursorl libpulse-deb libxshmfence-dev xauth xvfb git x11vnc fluxbox wmctrl libdbus-glib-1-2
+  # libc6 libstdc++6 libgcc1 libx11-6 libx11-xcb1 libxrender1 libxrandr2 mesa-utils libpulse0 libxi6
 
 stages:
   - android
@@ -24,24 +26,26 @@ android:
   script:
     - echo "Setting up Android Emulator..."
     # Download and install the necessary Android SDK tools and emulator
-    - sdkmanager --verbose "system-images;android-30;google_apis;x86_64"
+    - sdkmanager --verbose "platform-tools" "platforms;android-30" "emulator" "system-images;android-30;google_apis;x86_64"
     - sdkmanager --licenses
-    - sdkmanager --verbose "platform-tools" "platforms;android-30"
+    # - sdkmanager --verbose "platform-tools" "platforms;android-30"
 
     # create the android virtual device and see that it was made correctly
-    - echo "no" | avdmanager create avd -n test_avd -k "system-images;android-30;google_apis;x86_64"
-    - if [ $? -ne 0 ]; then echo "Error- Failed to create AVD."; exit 1; fi
+    - echo "no" | avdmanager create avd -n test_avd -k "system-images;android-30;google_apis;x86_64" -d pixel
+    # - if [ $? -ne 0 ]; then echo "Error- Failed to create AVD."; exit 1; fi
     - avdmanager list avd
 
     # Start the emulator in headless mode
-    - Xvfb :1 &
-    - export DISPLAY=:1
-    - nohup emulator -avd test_avd -no-snapshot -no-accel -no-audio -verbose > emulator.log 2>&1 &
+    # - Xvfb :1 &
+    # - export DISPLAY=:1
+    - emulator -avd test_avd -no-snapshot -no-accel -no-audio -verbose > emulator.log 2>&1 &
     - tail -f emulator.log &
 
     # Wait for the emulator to boot
-    - adb start-server
-    - adb wait-for-device || (echo "Emulator failed to start"; exit 1)
+    # - adb start-server
+    - abd devices
+    - adb wait-for-device 
+    # || (echo "Emulator failed to start"; exit 1)
     - adb shell input keyevent 82 # Unlock the emulator screen
     - echo "Emulator is ready!"
   artifacts:
