--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,15 +5,16 @@ variables:
   ADB_INSTALL_TIMEOUT: 20 # Timeout for ADB installation
 
   before_script:
-  # get necessary libraries
-  - sudo apt-get update && apt-get install -y curl sudo wget unzip bzip2 libdrm-deb libxkbcommon-deb libgbm-dev libasound-dev libnss3 libxcursorl libpulse-deb libxshmfence-dev xauth xvfb git x11vnc fluxbox wmctrl libdbus-glib-1-2
-  # install nodejs and npm
-  - sudo apt install nodejs
-  - sudo apt install npm
+  # Get necessary libraries
+  - apt-get update && apt-get install -y curl sudo wget unzip bzip2 libdrm-dev libxkbcommon-dev libgbm-dev libasound-dev libnss3 libxcursor1 libpulse-dev libxshmfence-dev xauth xvfb git x11vnc fluxbox wmctrl libdbus-glib-1-2
+  # Install Node.js and npm
+  - apt install -y nodejs
+  - apt install -y npm
   # Install pnpm globally
   - npm install -g pnpm
   # Install dependencies
   - pnpm install
+  # Update sdkmanager
   - sdkmanager --update
   # libc6 libstdc++6 libgcc1 libx11-6 libx11-xcb1 libxrender1 libxrandr2 mesa-utils libpulse0 libxi6
 
