--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,8 +4,8 @@ image: openjdk:18-jdk-slim
 variables:
   ADB_INSTALL_TIMEOUT: 20 # Timeout for ADB installation
 
-  before_script:
-  # Get necessary libraries
+before_script:
+  # install updates and get necessary libraries
   - apt-get update && apt-get install -y curl sudo wget unzip bzip2 libdrm-dev libxkbcommon-dev libgbm-dev libasound-dev libnss3 libxcursor1 libpulse-dev libxshmfence-dev xauth xvfb git x11vnc fluxbox wmctrl libdbus-glib-1-2
   # Install Node.js and npm
   - apt install -y nodejs
