--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,8 +8,9 @@ before_script:
   # install updates and get necessary libraries
   - apt-get update && apt-get install -y curl sudo wget unzip bzip2 libdrm-dev libxkbcommon-dev libgbm-dev libasound-dev libnss3 libxcursor1 libpulse-dev libxshmfence-dev xauth xvfb git x11vnc fluxbox wmctrl libdbus-glib-1-2
   # Install Node.js and npm
-  - apt install -y nodejs
-  - apt install -y npm
+  - curl -fsSL https://deb.nodesource.com/setup_current.x | sudo -E bash -
+  - apt-get install -y nodejs
+  - apt-get install -y npm
   # Install pnpm globally
   - npm install -g pnpm
   # Install dependencies
