Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,8 +12,8 @@ before_script:
   - curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.40.1/install.sh | bash
   # Download and install Node.js:
   - export NVM_DIR="$HOME/.nvm" 
-  - [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh" 
-  - [ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion"
+  - '[ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"'
+  - '[ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion"'
   - nvm install 23
   # Verify the Node.js version:
   - node -v # Should print "v23.6.1".
