--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,6 @@
-image: openjdk:18-jdk-slim
-  # reactnativecommunity/react-native-android
+image: reactnativecommunity/react-native-android
+# openjdk:18-jdk-slim
+  
 
 variables:
   ADB_INSTALL_TIMEOUT: 20 # Timeout for ADB installation
@@ -9,17 +10,12 @@ before_script:
   - apt-get update && apt-get install -y curl sudo wget unzip bzip2 libdrm-dev libxkbcommon-dev libgbm-dev libasound-dev libnss3 libxcursor1 libpulse-dev libxshmfence-dev xauth xvfb git x11vnc fluxbox wmctrl libdbus-glib-1-2
   # Install Node.js and npm
   # Download and install nvm:
-  - curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.40.1/install.sh | bash
-  # Download and install Node.js:
-  - export NVM_DIR="$HOME/.nvm" 
-  - [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh" 
-  - [ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion"
-  - nvm install 23
-  # Verify the Node.js version:
-  - node -v # Should print "v23.6.1".
-  - nvm current # Should print "v23.6.1".
-  # Verify npm version:
-  - npm -v # Should print "10.9.2".
+  # - curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.40.1/install.sh | bash
+  # # Download and install Node.js:
+  # - export NVM_DIR="$HOME/.nvm" 
+  # - [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh" 
+  # - [ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion"
+  # - nvm install 23
   # Install pnpm globally
   - npm install -g pnpm
   # Install dependencies
