--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -46,9 +46,9 @@ android:
     - avdmanager list avd
 
     # Start the emulator in headless mode
-    - Xvfb :1 &
-    - export DISPLAY=:1
-    - emulator -avd test_avd -no-snapshot -no-accel -no-audio -verbose > emulator.log 2>&1 &
+    # - Xvfb :1 &
+    # - export DISPLAY=:1
+    - emulator -avd test_avd -gpu off -no-snapshot -no-accel -no-audio -verbose > emulator.log 2>&1 &
     - tail -f emulator.log &
 
     # Wait for the emulator to boot
