--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native": "^7.0.0",
     "@react-navigation/stack": "^7.0.0",
     "@ui-kitten/components": "^5.3.1",
+    "csvtojson": "^2.0.10",
     "expo": "52",
     "expo-file-system": "~18.0.4",
     "expo-status-bar": "~2.0.0",
@@ -25,9 +26,12 @@
     "latest": "^0.2.0",
     "node-libs-react-native": "^1.2.1",
     "octokit": "^4.0.2",
+    "papaparse": "^5.5.1",
     "react": "18.3.1",
     "react-native": "0.76.3",
+    "react-native-csv": "^0.2.0",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-papaparse": "^0.0.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
@@ -37,6 +41,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/papaparse": "^5.3.15",
     "@types/react": "~18.3.12",
     "typescript": "~5.3.3"
   },
