--- a/app.json
+++ b/app.json
@@ -24,7 +24,8 @@
       "package": "com.noxaspera.ResearchFlow"
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/favicon.png",
+      "bundler": "metro"
     },
     "extra": {
       "eas": {
