--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@babel/runtime": "^7.26.7",
     "@eva-design/eva": "^2.2.0",
+    "@expo/metro-runtime": "^4.0.1",
     "@octokit/rest": "^21.1.0",
     "@react-native-masked-view/masked-view": "0.3.2",
     "@react-native-picker/picker": "2.9.0",
@@ -31,6 +32,7 @@
     "node-libs-react-native": "^1.2.1",
     "octokit": "^4.1.0",
     "react": "18.3.1",
+    "react-dom": "^18.3.1",
     "react-native": "0.76.3",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.7",
@@ -38,6 +40,7 @@
     "react-native-screens": "~4.1.0",
     "react-native-svg": "15.8.0",
     "react-native-ui-kitten": "^4.4.1",
+    "react-native-web": "^0.19.13",
     "typescript": "5.3.3"
   },
   "devDependencies": {
@@ -46,9 +49,16 @@
     "@testing-library/react-native": "^13.0.1",
     "@types/jest": "^29.5.14",
     "@types/react": "~18.3.18",
+    "babel-loader": "^9.2.1",
+    "babel-plugin-react-native-web": "^0.19.13",
+    "html-webpack-plugin": "^5.6.3",
     "jest-expo": "^52.0.3",
     "ts-jest": "^29.2.5",
-    "typescript": "~5.3.3"
+    "typescript": "~5.3.3",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.97.1",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.0"
   },
   "private": true
 }
