--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@babel/runtime": "^7.26.0",
     "@eva-design/eva": "^2.2.0",
+    "@react-native-community/datetimepicker": "^8.3.0",
     "@react-native-masked-view/masked-view": "0.3.2",
     "@react-native-picker/picker": "2.9.0",
     "@react-navigation/native": "^7.0.14",
