--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "@babel/runtime": "^7.26.0",
+    "@babel/runtime": "^7.26.9",
     "@eva-design/eva": "^2.2.0",
     "@react-native-masked-view/masked-view": "0.3.2",
     "@react-native-picker/picker": "2.9.0",
@@ -21,10 +21,12 @@
     "@ui-kitten/components": "^5.3.1",
     "@ui-kitten/eva-icons": "^5.3.1",
     "csvtojson": "^2.0.10",
-    "expo": "^52.0.23",
+    "expo": "^52.0.37",
     "expo-calendar": "^14.0.6",
-    "expo-file-system": "~18.0.6",
-    "expo-status-bar": "~2.0.0",
+    "expo-file-system": "~18.0.11",
+    "expo-network": "^7.0.5",
+    "expo-permissions": "^14.4.0",
+    "expo-status-bar": "~2.0.1",
     "fs": "0.0.1-security",
     "gson": "^0.1.5",
     "jest": "^29.7.0",
@@ -32,9 +34,9 @@
     "node-libs-react-native": "^1.2.1",
     "react": "18.3.1",
     "react-native": "0.76.3",
-    "react-native-calendars": "^1.1308.1",
+    "react-native-calendars": "^1.1309.1",
     "react-native-gesture-handler": "~2.20.2",
-    "react-native-reanimated": "~3.16.6",
+    "react-native-reanimated": "~3.16.7",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-svg": "15.8.0",
@@ -42,13 +44,13 @@
     "typescript": "5.3.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.26.0",
+    "@babel/core": "^7.26.9",
     "@babel/preset-typescript": "^7.26.0",
-    "@testing-library/react-native": "^13.0.0",
+    "@testing-library/react-native": "^13.0.1",
     "@types/jest": "^29.5.14",
     "@types/react": "~18.3.18",
-    "jest-expo": "^52.0.2",
-    "ts-jest": "^29.2.5",
+    "jest-expo": "^52.0.4",
+    "ts-jest": "^29.2.6",
     "typescript": "~5.3.3"
   },
   "private": true,
