--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ui-kitten/components": "^5.3.1",
     "@ui-kitten/eva-icons": "^5.3.1",
     "csvtojson": "^2.0.10",
+    "d3-scale": "^4.0.2",
     "expo": "^52.0.23",
     "expo-calendar": "^14.0.6",
     "expo-file-system": "~18.0.6",
@@ -40,6 +41,7 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-svg": "15.8.0",
+    "react-native-svg-charts": "^5.4.0",
     "react-native-ui-kitten": "^4.4.1",
     "typescript": "5.3.3"
   },
