--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.26.0",
+    "@emailjs/browser": "^4.4.1",
+    "@emailjs/react-native": "^4.2.2",
     "@eva-design/eva": "^2.2.0",
+    "@getbrevo/brevo": "^2.2.0",
     "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-masked-view/masked-view": "0.3.2",
     "@react-native-picker/picker": "2.9.0",
@@ -35,10 +38,12 @@
     "react": "18.3.1",
     "react-native": "0.76.7",
     "react-native-calendars": "^1.1308.1",
+    "react-native-email": "^2.1.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.6",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-smtp-mailer": "^1.2.5",
     "react-native-svg": "15.8.0",
     "react-native-ui-kitten": "^4.4.1",
     "typescript": "5.3.3"
