--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emailjs/react-native": "^4.2.2",
     "@eva-design/eva": "^2.2.0",
     "@getbrevo/brevo": "^2.2.0",
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-masked-view/masked-view": "0.3.2",
     "@react-native-picker/picker": "2.9.0",
