--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "node-libs-react-native": "^1.2.1",
     "react": "18.3.1",
     "react-native": "0.76.7",
-    "react-native-chart-kit": "^6.12.0",
     "react-native-calendars": "^1.1310.0",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-netinfo": "^1.1.0",
     "react-native-reanimated": "~3.16.7",
@@ -45,6 +45,7 @@
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-svg-charts": "^5.4.0",
+    "react-native-timer-picker": "^2.1.1",
     "react-native-ui-kitten": "^4.4.1",
     "typescript": "5.3.3"
   },
