--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@testing-library/jest-native": "^5.4.3",
     "@ui-kitten/components": "^5.3.1",
     "@ui-kitten/eva-icons": "^5.3.1",
+    "buffer": "^6.0.3",
     "csvtojson": "^2.0.10",
     "d3-scale": "^4.0.2",
     "expo": "^52.0.40",
