--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@emailjs/browser": "^4.4.1",
     "@emailjs/react-native": "^4.2.2",
     "@eva-design/eva": "^2.2.0",
-    "@react-native-async-storage/async-storage": "^2.1.2",
     "@getbrevo/brevo": "^2.2.0",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/datetimepicker": "^8.2.0",
@@ -40,8 +39,8 @@
     "node-libs-react-native": "^1.2.1",
     "react": "18.3.1",
     "react-native": "0.76.7",
-    "react-native-chart-kit": "^6.12.0",
     "react-native-calendars": "^1.1310.0",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-email": "^2.1.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-netinfo": "^1.1.0",
@@ -51,6 +50,7 @@
     "react-native-smtp-mailer": "^1.2.5",
     "react-native-svg": "15.8.0",
     "react-native-svg-charts": "^5.4.0",
+    "react-native-timer-picker": "^2.1.1",
     "react-native-ui-kitten": "^4.4.1",
     "typescript": "5.3.3"
   },
