--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ui-kitten/eva-icons": "^5.3.1",
     "csvtojson": "^2.0.10",
     "d3-scale": "^4.0.2",
+    "emailjs": "^4.0.3",
     "expo": "^52.0.40",
     "expo-calendar": "^14.0.6",
     "expo-file-system": "~18.0.12",
