fixed loading screen issue and supressed warnings

--- a/package.json
+++ b/package.json
@@ -32,10 +32,11 @@
     "crypto": "^1.0.1",
     "csvtojson": "^2.0.10",
     "d3-scale": "^4.0.2",
-    "emailjs": "^4.0.3",
     "eas": "^0.1.0",
+    "emailjs": "^4.0.3",
     "expo": "^52.0.40",
     "expo-auth-session": "~6.0.2",
+    "expo-build-properties": "^0.13.2",
     "expo-calendar": "^14.0.6",
     "expo-crypto": "^14.0.2",
     "expo-dev-client": "^5.0.20",
