--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "expo/AppEntry.js",
   "scripts": {
-    "preinstall": "npx only-allow pnpm",
+    "preinstall": "npx only-allow yarn",
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
@@ -12,7 +12,6 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.27.0",
-    "@emailjs/browser": "^4.4.1",
     "@emailjs/react-native": "^4.2.2",
     "@eva-design/eva": "^2.2.0",
     "@getbrevo/brevo": "^2.2.0",
@@ -28,12 +27,13 @@
     "buffer": "^6.0.3",
     "csvtojson": "^2.0.10",
     "d3-scale": "^4.0.2",
-    "emailjs": "^4.0.3",
     "expo": "^52.0.40",
+    "expo-auth-session": "^6.0.3",
     "expo-calendar": "^14.0.6",
     "expo-file-system": "~18.0.12",
     "expo-network": "^7.0.5",
     "expo-status-bar": "~2.0.1",
+    "expo-web-browser": "^14.0.2",
     "fs": "0.0.1-security",
     "gson": "^0.1.5",
     "jest": "^29.7.0",
@@ -43,13 +43,11 @@
     "react-native": "0.76.7",
     "react-native-calendars": "^1.1310.0",
     "react-native-chart-kit": "^6.12.0",
-    "react-native-email": "^2.1.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-netinfo": "^1.1.0",
     "react-native-reanimated": "~3.16.7",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-smtp-mailer": "^1.2.5",
     "react-native-svg": "15.8.0",
     "react-native-svg-charts": "^5.4.0",
     "react-native-timer-picker": "^2.1.1",
@@ -66,6 +64,5 @@
     "ts-jest": "^29.3.0",
     "typescript": "~5.3.3"
   },
-  "private": true,
-  "packageManager": "pnpm@9.15.4+sha512.b2dc20e2fc72b3e18848459b37359a32064663e5627a51e4c74b2c29dd8e8e0491483c3abb40789cfd578bf362fb6ba8261b05f0387d76792ed6e23ea3b1b6a0"
+  "private": true
 }
